z-index bug

--- a/static/css/base.sass
+++ b/static/css/base.sass
@@ -51,6 +51,7 @@ header
   top: 0
   position: relative
   height: 80px
+  z-index: 1
   
 #logo
   position: relative
